2009-11-04  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/alerts_status.php: different colour for table header.

	* operation/agentes/tactical.php: Use red colour from tango palette.

	* godmode/alerts/alert_lists.php, godmode/alerts/alert_compounds.php,
	godmode/alerts/configure_alerts.php: Added text if no alerts defined.

	*  Changelog: Added missed change.

2009-11-04  Miguel de Dios <miguel.dedios@artica.es>
	* DEBIAN/make_deb_package.sh: simplify the source code of script.

2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
	* godmode/alerts/alert_list.php: fix notice alert php describe in the
	tracker of sourceforge.
	* godmode/alerts/alert_compounds.php: fix the SQL query bug in PHP when
	load this page without agent in Pandora.
	Fixes: 2891215

2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
	* godmode/agentes/module_manager_editor_plugin.php: fix the size of field
	"Plugin parameters".
	Fixes: 2888996

2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
	* godmode/users/configure_user.php: fix to set the admin user when
	you create new user.

2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
	* DEBIAN/make_deb_package.sh: move the script to make the deb package into
	the DEBIAN and change some things into the sourcecode for the directory
	change.

2009-11-03  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/alerts/configure*.php: Improving integrity of 
	appareance in title.

	* godmode/alerts/alert_actions.php, godmode/alerts/alert_templates.php: 
	Added text if no action or template defined.

	* godmode/alerts/alert_list.php: Small fix

	* include/styles/pandora.css: Use red colour from tango palette in error.

2009-11-02  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Updated build/version.

	* pandora_console.spec: Updated to release 2; preparing the rc2.

	* godmode/agentes/module_manager.php: Fixed a small problem, don't allow
	to create network modules if not have the snmpconsole due a bad SQL. Fixed.
