@@ -1,3 +1,8 @@
+2009-11-04  Ramon Novoa  <rnovoa@artica.es>
+
+	* godmode/snmpconsole/snmp_alert.php: An agent, OID and custom OID may
+	  be specified at the same time.
+
 2009-11-04  Raul Mateos  <raulofpandora@gmail.com>
 
 	* operation/agentes/alerts_status.php: different colour for table header.
